k8s/apps/external/changedetection/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: changedetection
  namespace: changedetection
  labels:
    kubernetes.io/service-name: changedetection
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 5000
endpoints:
  - addresses:
      - 192.168.1.155
    conditions: { }
