k8s/apps/external/changedetection/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: changedetection
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
