k8s/apps/external/changedetection/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection
  namespace: changedetection
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "changedetection.ravil.space"
    - "changedetection.home.ravil.space"
  rules:
    - backendRefs:
        - name: changedetection
          port: 5000
